# training-pipeline

./: .gitignore  LICENSE  Makefile  poetry.toml  pylintrc  pyproject.toml
.github/workflows/: build.yaml
tests/: test_dummy.py  test_generate_artificial_data.py  test_indexing.py
training_pipeline/: generate_artificial_data.py
